# project-micric2

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/core/: Atoms.cpp  GlobalParameters.cpp  StringTable.cpp  SymbolTable.cpp  Translator.cpp  meaning.cpp
src/include/: Atoms.h  GlobalParameters.h  StringTable.h  SymbolTable.h  Translator.h  meaning.h
test/: CMakeLists.txt  codegenmodulartests.cpp  integrationtests.cpp  modulartests.cpp  randomtest.cpp  tools.cpp  tools.h
test/integrationtests/: codegen_integration.cpp  translator_expression.cpp  translator_program.cpp
test/modulartests/: codegen_modulartests.cpp  translator_modulartests.cpp
test/resources/: prog1.minic  prog1_expected.atom  prog2.minic
